@@ -156,20 +156,28 @@
 ##' GAM and weighting is done by the frequency of measurements in each
 ##' wind speed-direction bin. Note that if uncertainties are
 ##' calculated then the type is set to "default".
-##' @param percentile Note that the percentile value is calculated in the
-##' wind speed, wind direction \sQuote{bins}. For this reason it can
-##' also be useful to set \code{min.bin} to ensure there are a
-##' sufficient number of points available to estimate a
-##' percentile. See \code{quantile} for more details of how
-##' percentiles are calculated.
+##' @param percentile If \code{statistic = "percentile"} then
+##' \code{percentile} is used, expressed from 0 to 100. Note that the
+##' percentile value is calculated in the wind speed, wind direction
+##' \sQuote{bins}. For this reason it can also be useful to set
+##' \code{min.bin} to ensure there are a sufficient number of points
+##' available to estimate a percentile. See \code{quantile} for more
+##' details of how percentiles are calculated.
 ##'
-##' If \code{statistic = "percentile"} or \code{statistic = "cpf"}
-##' then \code{percentile} is used, expressed from 0 to
-##' 100. \code{percentile} can also be of length two, in which case
-##' the percentile \emph{interval} is considered. For example,
-##' \code{percentile = c(90, 100)} will plot the CPF for
-##' concentrations between the 90 and 100th percentiles. Percentile
-##' intervals can be useful for identifying specific sources.
+##' \code{percentile} is also used for the Conditional Probability
+##' Function (CPF) plots. \code{percentile} can be of length two, in
+##' which case the percentile \emph{interval} is considered for use
+##' with CPF. For example, \code{percentile = c(90, 100)} will plot
+##' the CPF for concentrations between the 90 and 100th
+##' percentiles. Percentile intervals can be useful for identifying
+##' specific sources. In addition, \code{percentile} can also be of
+##' length 3. The third value is the \sQuote{trim} value to be
+##' applied. When calculating percentile intervals many can cover very
+##' low values where there is no useful information. The trim value
+##' ensures that values greater than or equal to the trim * mean value
+##' are considered \emph{before} the percentile intervals are
+##' calculated. The effect is to extract more detail from many source
+##' signatures. See the manual for examples.
 ##' @param cols Colours to be used for plotting. Options include
 ##' \dQuote{default}, \dQuote{increment}, \dQuote{heat}, \dQuote{jet}
 ##' and \code{RColorBrewer} colours --- see the \code{openair}
@@ -342,7 +350,7 @@
 polarPlot <- function(mydata, pollutant = "nox", x = "ws", wd = "wd", type = "default",
                       statistic = "mean", resolution = "normal", limits = NA,
                       exclude.missing = TRUE, uncertainty = FALSE, percentile = NA,
-                      cols = "default", min.bin = 1, mis.col = "grey30", upper = NA, angle.scale = 315,
+                      cols = "default", min.bin = 1, mis.col = "grey", upper = NA, angle.scale = 315,
                       units = x, force.positive = TRUE, k = 100, normalise = FALSE,
                       key.header = "", key.footer = pollutant, key.position = "right",
                       key = TRUE, auto.text = TRUE, ...) {
@@ -470,17 +478,29 @@ polarPlot <- function(mydata, pollutant = "nox", x = "ws", wd = "wd", type = "de
     input.data <- expand.grid(u = seq(-upper, upper, length = int),
                               v = seq(-upper, upper, length = int))
 
-
+    ## ######################################################################
     if (statistic == "cpf") {
         ## can be interval of percentiles or a single (threshold)
         if (length(percentile) > 1) {
             statistic <- "cpfi" # CPF interval
-            Pval1 <- quantile(mydata[, pollutant], probs = percentile[1] / 100,
-                             na.rm = TRUE)
-            Pval2 <- quantile(mydata[, pollutant], probs = percentile[2] / 100,
-                             na.rm = TRUE)
-            sub <- paste("CPF for the ", percentile[1], " to ",
-                         percentile[2], "th", " percentile", sep = "")
+
+            if (length(percentile) == 3) {
+                ## in this case there is a trim value as a proprtion of the mean
+                Mean <- mean(mydata[, pollutant], na.rm = TRUE)
+                Pval1 <- quantile(subset(mydata[[pollutant]], mydata[[pollutant]] >= Mean * percentile[3]),
+                                  probs = percentile[1] / 100, na.rm = TRUE)
+
+                Pval2 <- quantile(subset(mydata[[pollutant]], mydata[[pollutant]] >= Mean * percentile[3]),
+                                   probs = percentile[2] / 100, na.rm = TRUE)
+
+            } else {
+                Pval1 <- quantile(mydata[, pollutant], probs = percentile[1] / 100,
+                                  na.rm = TRUE)
+                Pval2 <- quantile(mydata[, pollutant], probs = percentile[2] / 100,
+                                  na.rm = TRUE)
+            }
+            sub <- paste("CPF (", Pval1, " to ",
+                         Pval2, ")", sep = "")
 
         } else {
             Pval <- quantile(mydata[, pollutant], probs = percentile / 100, na.rm = TRUE)
