@@ -128,22 +128,31 @@
   bin. Note that if uncertainties are calculated then the
   type is set to "default".}
 
-  \item{percentile}{Note that the percentile value is
-  calculated in the wind speed, wind direction
-  \sQuote{bins}. For this reason it can also be useful to
-  set \code{min.bin} to ensure there are a sufficient
-  number of points available to estimate a percentile. See
-  \code{quantile} for more details of how percentiles are
-  calculated.
+  \item{percentile}{If \code{statistic = "percentile"} then
+  \code{percentile} is used, expressed from 0 to 100. Note
+  that the percentile value is calculated in the wind
+  speed, wind direction \sQuote{bins}. For this reason it
+  can also be useful to set \code{min.bin} to ensure there
+  are a sufficient number of points available to estimate a
+  percentile. See \code{quantile} for more details of how
+  percentiles are calculated.
 
-  If \code{statistic = "percentile"} or \code{statistic =
-  "cpf"} then \code{percentile} is used, expressed from 0
-  to 100. \code{percentile} can also be of length two, in
-  which case the percentile \emph{interval} is considered.
-  For example, \code{percentile = c(90, 100)} will plot the
-  CPF for concentrations between the 90 and 100th
-  percentiles. Percentile intervals can be useful for
-  identifying specific sources.}
+  \code{percentile} is also used for the Conditional
+  Probaility Function (CPF) plots. \code{percentile} can be
+  of length two, in which case the percentile
+  \emph{interval} is considered for use with CPF. For
+  example, \code{percentile = c(90, 100)} will plot the CPF
+  for concentrations between the 90 and 100th percentiles.
+  Percentile intervals can be useful for identifying
+  specific sources. In addition, \code{percentile} can also
+  be of length 3. The third value is the \sQuote{trim}
+  value to be applied. When calculating percentile
+  intervals many can cover very low values where there is
+  no useful information. The trim value ensures that values
+  greater than or equal to the trim * mean value are
+  considered \emph{before} the percentile intervals are
+  calculated. The effect is to extract more detail from
+  many source signatures. See the manual for examples.}
 
   \item{cols}{Colours to be used for plotting. Options
   include \dQuote{default}, \dQuote{increment},
