@@ -20,6 +20,8 @@ Changes in openair 0.9-0 [2013-02-13]
 	present
 *	Update AURN help file site information; add site type
 *	Show where data removed when min.bin > 1 for polarPlot
+*	Add 'trim' value to percentiles in polarPlot to extract more
+	source information.
 
 
 Changes in openair 0.8-0 [2012-11-30]
